--- a/src/main/resources/application-produce.properties
+++ b/src/main/resources/application-produce.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
 spring.datasource.username=root
-spring.datasource.password=Nowcoder_123
+spring.datasource.password=root
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=5
@@ -26,16 +26,16 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #logging.file=d:/work/data/nowcoder/community.log
 
 # MailProperties
-spring.mail.host=smtp.sina.com
+spring.mail.host=smtp.163.com
 spring.mail.port=465
-spring.mail.username=nowcoder@sina.com
-spring.mail.password=nowcoder123
+spring.mail.username=15232126107@163.com
+spring.mail.password=HLNFGYOBPFHBYMWO
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
 
 # community
-community.path.domain=http://120.55.53.217
-community.path.upload=/tmp/uploads
+community.path.domain=http://localhost:8080
+community.path.upload=D:/Postgraduate/Practice/JavaWebStudy/nowcoder/nowcoder-project/data/upload
 
 # RedisProperties
 spring.redis.database=11
@@ -50,7 +50,7 @@ spring.kafka.consumer.auto-commit-interval=3000
 
 # ElasticsearchProperties
 spring.data.elasticsearch.cluster-name=nowcoder
-spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9200
 
 # TaskExecutionProperties
 spring.task.execution.pool.core-size=5
@@ -71,14 +71,14 @@ spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThre
 spring.quartz.properties.org.quartz.threadPool.threadCount=5
 
 # wk
-wk.image.command=/opt/wkhtmltoimage.sh
-wk.image.storage=/tmp/wk-images
+wk.image.command=D:/software/wkhtmltox-0.12.6/wkhtmltopdf/bin/wkhtmltoimage
+wk.image.storage=D:/Postgraduate/Practice/JavaWebStudy/nowcoder/nowcoder-project/data/wk-images
 
 # qiniu
 qiniu.key.access=6RA-Uus95ZT_1znMrCMD8BpqfjT-K7OKmQTfKB48
 qiniu.key.secret=kPNnLFz2_tzztKUVpSLm0lYngtuHWyIq5LzTmLIL
 qiniu.bucket.header.name=community_header
-quniu.bucket.header.url=http://pvghrij81.bkt.clouddn.com
+qiniu.bucket.header.url=http://pvghrij81.bkt.clouddn.com
 qiniu.bucket.share.name=community_share
 qiniu.bucket.share.url=http://pvghvvuzm.bkt.clouddn.com
 
